force-app/main/default/objects/FeedbackVote__c/FeedbackVote__c.object-meta.xml
<CustomObject>
    <description>Object created to store the feedback votes of users..</description>
    <label>Feedback Vote</label>
    <nameField>
        <displayFormat>VOTE-{000000}</displayFormat>
        <label>Feedback Vote</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback Votes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>