force-app/main/default/objects/FeedbackVote__c/fields/VoterRef__c.field-meta.xml
<CustomField>
    <fullName>VoterRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Voter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Feedback_Votes</relationshipName>
    <type>Lookup</type>
</CustomField>