force-app/main/default/objects/FeedbackVote__c/fields/VoteScore__c.field-meta.xml
<CustomField>
    <fullName>VoteScore__c</fullName>
    <label>Vote Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>